force-app/main/default/objects/Video__c/Video__c.object-meta.xml
<CustomObject>
    <label>Video</label>
    <nameField>
        <displayFormat>v-{0000000}</displayFormat>
        <label>Video Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Video</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>