force-app/main/default/objects/Video__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <description>This is an external key for integration purposes</description>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>