force-app/main/default/objects/Video__c/fields/SlackUser__c.field-meta.xml
<CustomField>
    <fullName>SlackUser__c</fullName>
    <description>Name of the Slack User who requested for the video comment alerts</description>
    <label>Slack User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>