force-app/main/default/objects/Video__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <formula>IMAGE(ThumbnailURL__c, &apos;&apos;, 180,320)</formula>
    <label>Thumbnail</label>
    <type>Text</type>
</CustomField>